--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300|Gentium+Book+Basic:400,700,400italic' rel='stylesheet' type='text/css'>
-  <script src="js/jquery-1.8.1.min.js"></script>
-  
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300|Gentium+Book+Basic:400,700,400italic' rel='stylesheet' type='text/css'>
+  <script src="https://code.jquery.com/jquery-1.8.1.min.js"></script>
+
   <link rel="stylesheet" href="../docs/css/style.min.css" inline>
 
   <link rel="preload" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'">
@@ -61,7 +61,7 @@
                 <label for="check-passive" class="checkbox passive-voice" data-tooltip="Highlights possible instances of passive voice.">
                   <input id="check-passive" type="checkbox" value="passiveVoice" ng-click="toggleCheck('passiveVoice')" checked><i class="fa fa-question-circle fa-inverse pull-right"></i>&nbsp; Passive Voice
                 </label>
-                <label for="check-to-be-verbs" class="checkbox to-be-verbs" data-tooltip="Highlights possible instances of to be verbs.">
+                <label for="check-to-be-verbs" class="checkbox to-be-verbs" data-tooltip="Highlights possible instances of helping verbs.">
                   <input id="check-to-be-verbs" type="checkbox" value="toBeVerbs" ng-click="toggleCheck('toBeVerbs')" checked><i class="fa fa-question-circle fa-inverse pull-right"></i>&nbsp; To Be Verbs
                 </label>
                 <label for="check-lexical" class="checkbox lexical-illusions" data-tooltip="Highlights possible lexical illusions (duplicate words).">
@@ -106,7 +106,7 @@
           <li class="filler-words" ng-class="{'active': currentDefinition === 'filler-words'}" ng-click="currentDefinition = 'filler-words'">Filler Words</li>
           <li class="redundant-words" ng-class="{'active': currentDefinition === 'redundant-words'}" ng-click="currentDefinition = 'redundant-words'">Redundant Words</li>
           <li class="passive-voice" ng-class="{'active': currentDefinition == 'passive-voice'}" ng-click="currentDefinition = 'passive-voice'">Passive Voice</li>
-          <li class="to-be-verbs" ng-class="{'active': currentDefinition == 'to-be-verbs'}" ng-click="currentDefinition = 'to-be-verbs'">To Be Verbs</li>
+          <li class="to-be-verbs" ng-class="{'active': currentDefinition == 'to-be-verbs'}" ng-click="currentDefinition = 'to-be-verbs'">Helping Verbs</li>
           <li class="lexical-illusions" ng-class="{'active': currentDefinition == 'lexical-illusions'}" ng-click="currentDefinition = 'lexical-illusions'">Lexical Illusions</li>
           <li class="nominalizations" ng-class="{'active': currentDefinition == 'nominalizations'}" ng-click="currentDefinition = 'nominalizations'">Nominalizations</li>
           <li class="misused-words" ng-class="{'active': currentDefinition == 'misused-words'}" ng-click="currentDefinition = 'misused-words'">Common Misused Words</li>
@@ -188,11 +188,11 @@
           <p>Further reading: <a href="http://www.msvu.ca/en/home/studentservices/academicadvisingsupport/writingresourcecentre/handouts/makingclearpronounreferences/default.aspx">Making Clear Pronoun References at Mount Saint Vincent University</a></p>
         </div>
         <div class="to-be-verbs-description description" ng-class="{'active': currentDefinition === 'to-be-verbs'}">
-          <h2>To Be Verbs</h2>
+          <h2>Helping Verbs</h2>
           <ul>
             <li>am, is, are, was, were, be, been, being, have, has, had, do, does, did, shall, will, should, would, may, might, must, can, could</li>
           </ul>
-          <p>This test highlights "to be verbs" in your writing. This allows you to check the to be verbs for clarity. Avoid weak to be verbs that only convey existence and not action. </p>
+          <p>This test highlights "helping verbs" in your writing. This allows you to check the helping verbs for clarity. Avoid weak helping verbs that only convey existence and not action. </p>
           <ul><li><em>Determining when a student <u>is</u> a problem makes the teacher’s job more interesting.</em></li><li><em>Determining when a student <u>creates</u> a problem makes the teacher’s job more interesting.</em></li></ul>
           <p>Further reading: <a href="https://www.grammar.com/verb-to-be/">Verb "To Be"</a></p>
         </div>
